# gravsim-rust

./: AGENTS.md  Cargo.toml  README.md
docs/: DEMO_IDEAS.md
src/: app.rs  benchmark.rs  config.rs  main.rs  render.rs  sim.rs
src/cpu/: benchmark.rs  bodies.rs
src/cpu/chain/: main.rs  sim.rs
src/cpu/common/: bodies.rs  config.rs
src/cpu/particle_sim/: main.rs  sim.rs
src/gpu/: config.rs  main.rs  state.rs  types.rs
src/gpu/chain/: camera.rs  config.rs  main.rs  state.rs
src/gpu/common/: types.rs
src/gpu/particle_sim/: config.rs  main.rs  state.rs
src/gpu/shaders/: blit_texture.wgsl  chain_compute.wgsl  chain_grid.wgsl  chain_render.wgsl  compute.wgsl  fade_overlay.wgsl  render.wgsl
