[package]
name = "gravsim-rust"
version = "0.1.0"
edition = "2021"
default-run = "grav2mouse_cpu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
env_logger = "0.11.8"
glam = "0.24.1"
pollster = "0.3.0"
rand = "0.8.5"
raylib = "3.7.0"
rayon = "1.7.0"
wgpu = "0.19.4"
winit = "0.29.15"

[[bin]]
name = "grav2mouse_cpu"
path = "src/cpu/particle_sim/main.rs"

[[bin]]
name = "grav2mouse_gpu"
path = "src/gpu/particle_sim/main.rs"

[[bin]]
name = "chain_cpu"
path = "src/cpu/chain/main.rs"

[[bin]]
name = "chain_gpu"
path = "src/gpu/chain/main.rs"
